more changes to pom files